API Rest v1 completa

--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 /* 
-Theme Name: MiraUP Ativos de Ditiais | API Rest
+Theme Name: MiraUP Ativos de Digitais | API Rest
+
+Theme URI: https://www.miraup.com.br/
+Author: Alexandre Brito
+Description: O tema é uma API Rest que fornece acesso a ativos digitais, como imagens, ilustrações, ícones e outros recursos criativos. A API é projetada para ser fácil de catalogar e fazer buscas rápidas aos ativos digitais. O tema é desenvolvido em PHP e utiliza o WordPress como plataforma de gerenciamento de conteúdo. O site deve ser usado exclusivamente para fins pessoais e educativos, e não comerciais. O uso do tema ou do site só deve ser realizado com autorização expressa do autor.
+Requires at least: 5.9
+Tested up to: 6.8
+Requires PHP: 8.2.23
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: miraupBD
+Tags: MiraUP, Design, Resource, Ferramenta, Pesquisa, Identidade Visual, Ilustração, Ícone, UI Kit, Wireframe, Fotos, Social Medias, Códigos, Vídeos, Apresentações, Editorial.
+
+MiraUP Banco de Design Theme, (C) 2025 miraup.com.br
 */
